--- a/environment.yml
+++ b/environment.yml
@@ -1,34 +1,65 @@
 name: basemap
 dependencies:
+- appnope=0.1.0=py35_0
 - basemap=1.0.7=np110py35_0
 - curl=7.43.0=1
 - cycler=0.9.0=py35_0
+- decorator=4.0.6=py35_0
 - freetype=2.5.5=0
 - geos=3.3.3=0
 - h5py=2.5.0=np110py35_4
 - hdf5=1.8.15.1=2
+- ipykernel=4.2.2=py35_0
+- ipython=4.1.1=py35_0
+- ipython_genutils=0.1.0=py35_0
+- ipywidgets=4.1.1=py35_0
+- jinja2=2.8=py35_0
+- jsonschema=2.4.0=py35_0
+- jupyter=1.0.0=py35_1
+- jupyter_client=4.1.1=py35_0
+- jupyter_console=4.1.0=py35_0
+- jupyter_core=4.0.6=py35_0
 - krb5=1.13.2=0
 - libnetcdf=4.3.3.1=1
 - libpng=1.6.17=0
+- markupsafe=0.23=py35_0
 - matplotlib=1.5.1=np110py35_0
+- mistune=0.7.1=py35_0
 - mkl=11.3.1=0
+- nbconvert=4.1.0=py35_0
+- nbformat=4.0.1=py35_0
 - netcdf4=1.2.2=np110py35_0
+- notebook=4.1.0=py35_0
 - numpy=1.10.4=py35_0
-- openssl=1.0.1k=1
+- openssl=1.0.2f=0
+- pandas=0.17.1=np110py35_0
+- path.py=8.1.2=py35_1
+- pexpect=3.3=py35_0
+- pickleshare=0.5=py35_0
 - pip=8.0.2=py35_0
+- ptyprocess=0.5=py35_0
+- pygments=2.1=py35_0
 - pyparsing=2.0.3=py35_0
 - pyqt=4.11.4=py35_1
-- python=3.5.0=0
+- python=3.5.1=0
 - python-dateutil=2.4.2=py35_0
+- python.app=1.2=py35_4
 - pytz=2015.7=py35_0
+- pyzmq=15.2.0=py35_0
 - qt=4.8.7=1
+- qtconsole=4.1.1=py35_0
 - readline=6.2=2
+- scipy=0.17.0=np110py35_0
+- seaborn=0.7.0=py35_0
 - setuptools=19.6.2=py35_0
+- simplegeneric=0.8.1=py35_0
 - sip=4.16.9=py35_0
 - six=1.10.0=py35_0
 - sqlite=3.9.2=0
+- terminado=0.5=py35_1
 - tk=8.5.18=0
+- tornado=4.3=py35_0
+- traitlets=4.1.0=py35_0
 - wheel=0.29.0=py35_0
 - xz=5.0.5=1
 - zlib=1.2.8=0
-
