--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: basemap
+name: ComputationalPhysics
 dependencies:
 - basemap=1.0.7=np110py35_0
 - curl=7.43.0=1
@@ -14,6 +14,7 @@ dependencies:
 - numpy=1.10.4=py35_0
 - pandas=0.17.1=np110py35_0
 - python=3.5.1=0
+- pyparsing=2.0.3=py35_0
 - scipy=0.17.0=np110py35_0
 - seaborn=0.7.0=py35_0
 - zlib=1.2.8=0
