--- a/environment.yml
+++ b/environment.yml
@@ -15,6 +15,7 @@ dependencies:
 - netcdf4=1.2.2=np110py35_0
 - numpy=1.10.4=py35_0
 - openssl=1.0.1k=1
+- pandas=0.17.1=np110py35_0
 - pip=8.0.2=py35_0
 - pyparsing=2.0.3=py35_0
 - pyqt=4.11.4=py35_1
@@ -23,6 +24,8 @@ dependencies:
 - pytz=2015.7=py35_0
 - qt=4.8.7=1
 - readline=6.2=2
+- scipy=0.17.0=np110py35_0
+- seaborn=0.7.0=py35_0
 - setuptools=19.6.2=py35_0
 - sip=4.16.9=py35_0
 - six=1.10.0=py35_0
