--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,8 @@ dependencies:
 - fontconfig=2.11.1=5
 - freetype=2.5.5=0
 - geos=3.3.3=0
+- h5py=2.5.0=np110py35_4
+- hdf5=1.8.15.1=2
 - libgfortran=1.0=0
 - libpng=1.6.17=0
 - libxml2=2.9.2=0
