--- a/environment.yml
+++ b/environment.yml
@@ -1,24 +1,28 @@
 name: comphys
 dependencies:
 - basemap=1.0.7=np110py35_0
+- curl=7.43.0=1
 - cycler=0.9.0=py35_0
 - fontconfig=2.11.1=5
 - freetype=2.5.5=0
 - geos=3.3.3=0
 - h5py=2.5.0=np110py35_4
 - hdf5=1.8.15.1=2
+- krb5=1.13.2=0
 - libgfortran=1.0=0
+- libnetcdf=4.3.3.1=1
 - libpng=1.6.17=0
 - libxml2=2.9.2=0
 - matplotlib=1.5.1=np110py35_0
 - mkl=11.3.1=0
+- netcdf4=1.2.2=np110py35_0
 - numpy=1.10.4=py35_0
-- openssl=1.0.2f=0
+- openssl=1.0.1k=1
 - pandas=0.17.1=np110py35_0
 - pip=8.0.2=py35_0
 - pyparsing=2.0.3=py35_0
 - pyqt=4.11.4=py35_1
-- python=3.5.1=0
+- python=3.5.0=0
 - python-dateutil=2.4.2=py35_0
 - pytz=2015.7=py35_0
 - qt=4.8.7=1
